examples/test/testpolicy2751.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2751
  namespace: namespace410
spec:
  podSelector:
    matchLabels:
      key15: value6
      key27: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value25
      podSelector:
        matchLabels:
          key23: value20
          key32: value18
          key2: value19
